--- a/modules/form_validate/ga_push_form_validate.links.task.yml
+++ b/modules/form_validate/ga_push_form_validate.links.task.yml
@@ -3,3 +3,4 @@ ga_push_form_validate.settings:
   parent: ga_push.settings
   description: 'Configure ga push form validate.'
   route_name: ga_push_form_validate.settings
+  base_route: ga_push.settings
